--- a/_config.yml
+++ b/_config.yml
@@ -179,7 +179,7 @@ socialLinks:
 # - {link: "https://plus.google.com/b/102444623953913144164", icon: "google-plus"}
 # - {link: "https://twitter.com/intent/user?screen_name=GDGLviv", icon: "twitter"}
  - {link: "https://www.facebook.com/gcdcindore/?ref=bookmarks", icon: "facebook"}
- - {permalink: "/feed.xml", icon: "rss"}
+# - {permalink: "/feed.xml", icon: "rss"}
 footerBlocks:
  -
   title: "Links"
