--- a/_data/organizers.yml
+++ b/_data/organizers.yml
@@ -1,10 +1,10 @@
 - 
   group: "Main organizer"
   elements: 
-    - {name: "GDG Lviv", description: "GDG Lviv - Open and volunteer geek community", link: "http://lviv.gdg.org.ua", imageUrl: "gdg-lviv.svg"}
+    - {name: "GCDC Indore", description: "GCDC Indore - Open and volunteer geek community", link: "http://gcdcindore.dev", imageUrl: "organizer-logo.png"}
 - 
   group: "Co-organizers"
   elements: 
-    - {name: "GDG Lviv", description: "GDG Kyiv - Open and volunteer geek community", link: "http://kyiv.gdg.org.ua", imageUrl: "gdg-kyiv.svg"}
-    - {name: "GDG Cherkassy", description: "GDG Cherkassy - Open and volunteer geek community", link: "http://cherkassy.gdg.org.ua", imageUrl: "gdg-cherkasy.svg"}
-    - {name: "GDG Dnipropetrovsk", description: "GDG Dnipropetrovsk - Open and volunteer geek community", link: "http://dnipro.gdg.org.ua", imageUrl: "gdg-dnipropetrovsk.svg"}
+    - {name: "GDG Indore", description: "GDG Indore - Open and volunteer geek community", link: "http://gdgindore.in", imageUrl: "gdgindore.png"}
+    - {name: "WTM Indore", description: "WTM Indore - Open and volunteer geek community", link: "http://iwd.gdgindore.in", imageUrl: "wtmindore.png"}
+  #  - {name: "GDG Dnipropetrovsk", description: "GDG Dnipropetrovsk - Open and volunteer geek community", link: "http://dnipro.gdg.org.ua", imageUrl: "gdg-dnipropetrovsk.svg"}
