--- a/_config.yml
+++ b/_config.yml
@@ -166,7 +166,7 @@ ticketsOffers:
   ticketsNumber: "50"
   buyButtonLink: "#"
   buyButtonText: "Book Now"
-  additionalInfo: "Requires a valid student ID at the conference check in. Without student ID at the check in, ticket will be cancelled without refund"
+  additionalInfo: "Requires a valid student ID at the conference check in. Without student ID at the check in, ticket will be cancelled"
 #  ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
   validFrom: "2019-05-01T10:00"
   validThrough: "2014-10-23T23:59"
