--- a/_config.yml
+++ b/_config.yml
@@ -100,9 +100,9 @@ eventAddressCountry: "Ukraine"
 eventStartTime: "2014-10-25T10:00"
 eventDoorTime: "09:00"
 eventEndTime: "2014-10-25T20:00"
-eventPlaceCoordinates: "49.843237, 24.028751"
-mapCenterCoordinates: "49.842537, 24.025701"
-mapMobileCenterCoordinates: "49.841620, 24.029411"
+eventPlaceCoordinates: "22.7231439,75.8870955"
+mapCenterCoordinates: "22.7231439,75.8870955"
+mapMobileCenterCoordinates: "22.7231439,75.8870955"
 
 # Venue Block
 venueBlockTitle: "Venue"
@@ -110,8 +110,8 @@ venueBigImage: "venue_0.jpg"
 venueSmallImage1: "venue_1.jpg"
 venueSmallImage2: "venue_2.jpg"
 venueSmallImage3: "venue_3.jpg"
-venueTitle: "Kinopalace Cinema"
-venueFeatures: ["3 huge cinema screens", "Doulby Digital Surround EX audio system", "Located directly in the city center"]
+venueTitle: "Wittyfeed Headquarters"
+venueFeatures: ["Shekhar Central", "Palasia Square", "Indore"]
 
 # Tweets Feed Block
 tweetsFeedImage: "twitter-feed.jpg"
@@ -140,7 +140,7 @@ ticketsOffers:
   priceCurrency: "INR"
   ticketsNumber: "150"
 #  ribbon: "-5%"
-  buyButtonLink: "#"
+  buyButtonLink: "https://www.eventbrite.com/e/cloud-next-extended-19-tickets-60827713328"
   buyButtonText: "Book Now"
 #  ticketContentList: ["First to be released", "Dummy text of the printing", "Typesetting industry"]
   validFrom: "2019-05-22T10:00"
