--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -3,18 +3,18 @@
   name: "Tushar"
   surname: "Pal"
   company: "Protonshub"
-  title: "Developer Relations Program Manager"
+  title: "CEO"
   bio: "Tushar Pal is true technology enthusiast, who loves to work in areas where humans and machines meet to create amazing new products and services. He is experienced program manager with strong technical background, who is able to establish priorities for complex projects and execute across multiple organizations, according to long-term objectives. Tushar Pal has worked in Poland, USA, Germany, Belgium and The Netherlands and truly values diversity of international working environment. His most visible characteristics are individualization (when dealing directly with people), ideation&intellection (inexhaustible source of new concepts) and strong communication (experienced trainer, community manager). He is also an activator constantly impatient for action."
-  thumbnailUrl: DawidOstrowski.jpg
+  thumbnailUrl: TusharPal.jpg
   rockstar: true
   social: 
   #  - {name: "google-plus", link: "https://plus.google.com/+TusharPalOstrowski/"}
 - 
   id: 4
-  name: "Tushar"
-  surname: "Pal"
-  company: "Protonshub"
-  title: "Developer Relations Program Manager"
+  name: "Dharmesh"
+  surname: "Vaya"
+  company: "Consultant"
+  title: "Google Developer Expert"
   bio: "Tushar Pal is true technology enthusiast, who loves to work in areas where humans and machines meet to create amazing new products and services. He is experienced program manager with strong technical background, who is able to establish priorities for complex projects and execute across multiple organizations, according to long-term objectives. Tushar Pal has worked in Poland, USA, Germany, Belgium and The Netherlands and truly values diversity of international working environment. His most visible characteristics are individualization (when dealing directly with people), ideation&intellection (inexhaustible source of new concepts) and strong communication (experienced trainer, community manager). He is also an activator constantly impatient for action."
   thumbnailUrl: DawidOstrowski.jpg
   rockstar: true
