Updated address block

--- a/_config.yml
+++ b/_config.yml
@@ -90,16 +90,16 @@ rockstarSpeakersButtonText: "See all speakers"
 
 # Location Block
 locationBlockTitle: "Location"
-eventLocationName: "Conference Hall"
+eventLocationName: "WittyFeed HeadQuarters"
 eventLocationLink: "http://cabinet.kinopalace.lviv.ua/showtimes/"
-eventStreetAddress: "22 Teatral'na St"
+eventStreetAddress: "Shekhar Central, Palasia Square, Indore"
 eventAddressLocality: "Lviv"
 eventAddressLocalityRegion: "Lvivska"
 eventPostalCode: "79000"
 eventAddressCountry: "Ukraine"
 eventStartTime: "2014-10-25T10:00"
 eventDoorTime: "09:00"
-eventEndTime: "2014-10-25T20:00"
+eventEndTime: "2014-10-25T16:00"
 eventPlaceCoordinates: "22.7231439,75.8870955"
 mapCenterCoordinates: "22.7231439,75.8870955"
 mapMobileCenterCoordinates: "22.7231439,75.8870955"
