--- a/_data/team.yml
+++ b/_data/team.yml
@@ -134,7 +134,7 @@
   name: "Rashi"
   surname: "Nagwanshi"
   title: ""
-  thumbnailUrl: rashiJain.jpg
+  thumbnailUrl: rashiN.png
   team: true
   social: 
     - {name: "linkedin", link: "http://www.linkedin/in/rashi-nagwanshi"}
