--- a/_config.yml
+++ b/_config.yml
@@ -161,7 +161,7 @@ ticketsOffers:
 #  ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
   validFrom: "2019-04-27T08:00"
   validThrough: "2014-05-04T23:59"
-  disabled: true
+  #disabled: true
  -
   name: "Lazy bird"
   price: "0"
