--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ venueFeatures: ["Shekhar Central", "Palasia Square", "Indore"]
 # Tweets Feed Block
 tweetsFeedImage: "twitter-feed.jpg"
 tweetsFeedTitle: "What's Up?"
-twitterHashTag: "nextextendedindore"
+twitterHashTag: "Next19Extended"
 twitterFeed: "http://lviv.gdg.org.ua/tweetledee/favoritesjson.php?c=10&cache_interval=8000"
 
 # Partners Block
