Updated Tushar's Title

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -2,8 +2,8 @@
   id: 3
   name: "Tushar"
   surname: "Pal"
-  company: "Protonshub"
-  title: "CEO"
+  company: "Technology Evangelist"
+  title: "CEO, Protonshub"
   bio: "TBD"
   thumbnailUrl: TusharPal.jpg
   rockstar: true
