--- a/_config.yml
+++ b/_config.yml
@@ -93,10 +93,10 @@ locationBlockTitle: "Location"
 eventLocationName: "WittyFeed HeadQuarters"
 eventLocationLink: "http://cabinet.kinopalace.lviv.ua/showtimes/"
 eventStreetAddress: "Shekhar Central, Palasia Square, Indore"
-eventAddressLocality: "Lviv"
-eventAddressLocalityRegion: "Lvivska"
-eventPostalCode: "79000"
-eventAddressCountry: "Ukraine"
+eventAddressLocality: "Indore"
+eventAddressLocalityRegion: "Madhya Pradesh"
+eventPostalCode: "452010"
+eventAddressCountry: "India"
 eventStartTime: "2014-10-25T10:00"
 eventDoorTime: "09:00"
 eventEndTime: "2014-10-25T16:00"
