--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -16,7 +16,7 @@
   company: "Google Developer Expert"
   title: "Independent Consultant"
   bio: "TBD"
-  thumbnailUrl: DharamVaya.jpg
+  thumbnailUrl: dharmeshvaya.png
   rockstar: true
   social: 
   #  - {name: "google-plus", link: "https://plus.google.com/+Tushar PalOstrowski/"}
