--- a/_data/team.yml
+++ b/_data/team.yml
@@ -89,7 +89,7 @@
   name: "Gopal"
   surname: "Oswal"
   title: ""
-  thumbnailUrl: GopalOswal1.jpg
+  thumbnailUrl: pp.jpg
   team: true
   social: 
     - {name: "facebook", link: "https://www.facebook.com/gopal.oswal.3"}
