--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -5,7 +5,7 @@
   company: "Technology Evangelist"
   title: "CEO, Protonshub"
   bio: "TBD"
-  thumbnailUrl: tushar.jpg
+  thumbnailUrl: IMG_1420.jpg
   rockstar: true
   social: 
   #  - {name: "google-plus", link: "https://plus.google.com/+TusharPalOstrowski/"}
