--- a/_config.yml
+++ b/_config.yml
@@ -161,6 +161,8 @@ ticketsOffers:
 #  ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
   validFrom: "2019-04-27T08:00"
   validThrough: "2014-05-04T23:59"
+  soldOut: true
+  soldOutText: "Sold Out"
   #disabled: true
  -
   name: "Lazy bird"
@@ -173,7 +175,7 @@ ticketsOffers:
 #  ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
   validFrom: "2019-05-04T10:00"
   validThrough: "2014-10-23T23:59"
-  disabled: true
+  #disabled: true
 #  soldOutText: "Sold Out"
 
 # Footer
