Updated Rajat's title

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -36,7 +36,7 @@
   name: "Rajat"
   surname: "Jaiswal"
   company: "Applied Information Sciences"
-  title: "Google Developer Expert"
+  title: "Backend Special"
   bio: "TBD"
   thumbnailUrl: RajatJaiswal.jpg
   rockstar: true
