Updated tushar's title

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -3,7 +3,7 @@
   name: "Tushar"
   surname: "Pal"
   company: "Technology Evangelist"
-  title: "CEO, Protonshub"
+  title: "CTO, Protonshub"
   bio: "TBD"
   thumbnailUrl: IMG_1420.jpg
   rockstar: true
